--- a/app/includes/navigation/navigation.html
+++ b/app/includes/navigation/navigation.html
@@ -1,8 +1,42 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>Navigation goes here</h1>
-      <p>Example of dynamic data: <%- profile.first_name %></p>
-    </div>
-  </div>
+<div class="navigation-top-menu hidden-xs hidden-sm">
+	<div class="container">
+		<div class="row">
+			<a href="#">Get a Quote</a>
+			<a href="#">My Account</a>
+			<a href="#">Pay Now</a>
+			<a href="#">henrycooper.com</a>
+		</div>
+	</div>
+</div>
+<div class="navbar-placeholder">
+	<div class="navbar-section" data-spy="affix" data-offset-top="40">
+		<div class="hsct-container">
+			<div class="row">
+				<nav class="hsct-navbar" role="navigation">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="hsct-navbar-header">
+						<button  id="navbar-toggle-id" type="button" class="hsct-navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+							<span class="sr-only">Toggle navigation</span>
+							MENU
+						</button>
+						<a class="hsct-navbar-brand" href="#"></a>
+					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div id="navbar-collapse-id" class="collapse hsct-navbar-collapse">
+						<a class="btn btn-navigation-contact-us hidden-xs hidden-sm" href="#">CONTACT US</a>
+						<ul class="nav hsct-navbar-nav navbar-right">
+							<li><a class="visible-xs-block visible-sm-block" href="#">Home</a></li>
+							<li><a class="hidden-xs hidden-sm" href="#">About</a></li>
+							<li><a href="#">Products</a></li>
+							<li><a class="visible-xs-block visible-sm-block" href="#">Articles</a></li>
+							<li><a class="visible-xs-block visible-sm-block" href="#">Posts</a></li>
+							<li><a class="visible-xs-block visible-sm-block" href="#">Log-in</a></li>
+							<li><a class="hidden-xs hidden-sm" href="#">Events</a></li>
+							<li><a class="hidden-xs hidden-sm" href="#">News</a></li>
+						</ul>
+					</div><!-- /.navbar-collapse -->
+				</nav>
+			</div>
+		</div>
+	</div>
 </div>
